@@ -1,5 +1,6 @@
 6.3.5
   - Performance improvement.
+  - Added inline view style for DB2 z/OS.
 
 6.3.4
   - Added inline view style for Informix.
